<resources>
    <string name="app_name">Box24SDK</string>
    <string name="LanguageTitle">English</string>
    <string name="Skip">Skip</string>
    <string name="Faq">FAQ</string>
    <string name="Intro1Header">Sign Up</string>
    <string name="Intro2Header">Drop Off</string>
    <string name="Intro3Header">Notify</string>
    <string name="Intro4Header">Pick Up</string>
    <string name="Intro5Header">Turnaround Time</string>
    <string name="Intro1Detail">\nLog on to www.washbox24.com or download Box24 app (iPhone and Android) to get your self signed up</string>
    <string name="Intro2Detail">\nDrop your items off anytime 24/7 at the locker using Quick Pin or your mobile number</string>
    <string name="Intro3Detail">\nGet notified by App and/or SMS right to your phone</string>
    <string name="Intro4Detail">\nPick your items up anytime 24/7 at the locker using Quick Pin</string>
    <string name="Intro5Detail">\nRegular: Turnaround time of 72 hours\n\nExpress: Turnaround time of 24 hours\n\n*100% additional charges are applicable</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="ForgotPasswordHeader">Forgot Password</string>
    <string name="Username">Username</string>
    <string name="MobilePhone">Mobile No.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="IdPass">Identification Number/Passport ID</string>
    <string name="Birthday">Birthday</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="MoveAndScale">Move and Scale</string>
    <string name="Choose">Choose</string>
    <string name="Success">Success</string>
    <string name="PaySuccessMessage">Your transaction was successful</string>
    <string name="AccountInformation">ACCOUNT INFORMATION</string>
    <string name="PersonalInformation">PERSONAL INFORMATION</string>
    <string name="ContactInformation">CONTACT INFORMATION</string>
    <string name="CreateAccount">Create Account</string>
    <string name="UpdateAccount">Update Account</string>
    <string name="CreateNewAccount">CREATE NEW ACCOUNT</string>
    <string name="Login">LOG IN</string>
    <string name="FBLogin">LOG IN WITH FACEBOOK</string>
    <string name="CityHeader">City</string>
    <string name="CountryHeader">Country</string>
    <string name="Previous">Previous</string>
    <string name="Next">Next</string>
    <string name="Done">Done</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="ErrorMessage">Error</string>
    <string name="ErrorService">Something went wrong Please try again</string>
    <string name="EmailUserNameEmpty">Please enter your email or username</string>
    <string name="PasswordEmpty">Password must be at least 6 characters</string>
    <string name="PasswordConfirmEmpty">Please enter your confirm password</string>
    <string name="PasswordNewEmpty">Please enter your new password</string>
    <string name="PasswordNotMatch">Password confirmation is not matched</string>
    <string name="EmailEmpty">Please enter your email</string>
    <string name="EmailWrongFormat">Please enter correct email format</string>
    <string name="EmailDuplicate">This email is duplicated</string>
    <string name="EmailNotExist">This email doesn\'t exist</string>
    <string name="CheckYourEmail">Please check your email</string>
    <string name="UsernameEmpty">Please enter your username</string>
    <string name="UsernameDuplicate">This username is duplicated</string>
    <string name="UsernameWarning">Username must be 6-10 characters</string>
    <string name="UsernameEnglish">Username contains English Letters or Numbers without space</string>
    <string name="PhotoWarning">Please add your profile photo</string>
    <string name="MobileEmpty">Please enter your mobile phone number</string>
    <string name="Message">Message</string>
    <string name="IronPackageMessage">You have to purchase other packages first before buying Iron Only Plan</string>
    <string name="FirstTimeChatMessage">Click on icon below to start chatting</string>
    <string name="WaitingChatMessage">Please wait a moment...</string>
    <string name="HouseNumber">House No.</string>
    <string name="Building">Building Name</string>
    <string name="Lane">Lane</string>
    <string name="Street">Street</string>
    <string name="SubDistrict">Sub District</string>
    <string name="District">District</string>
    <string name="Province">Province</string>
    <string name="Postcode">Postcode</string>
    <string name="Country">Country</string>
    <string name="Summary">Summary</string>
    <string name="Promotion">Promotion</string>
    <string name="Service">Washing Service</string>
    <string name="InStoreService">Ironing\nService</string>
    <string name="Info">Info</string>
    <string name="RequestQuickPin">Locker\nQuick Pin</string>
    <string name="PureChat">Chat</string>
    <string name="WebOrder">Shop</string>
    <string name="Location">Location</string>
    <string name="Locations">Locations</string>
    <string name="List">List</string>
    <string name="ListMap">List</string>
    <string name="Map">Map</string>
    <string name="OurServices">Our Services</string>
    <string name="SelectLocation">Please select location or you can add your favorite locker at Locker Detail</string>
    <string name="CreditsShare">CREDITS :</string>
    <string name="BahtShare">SGD</string>
    <string name="ExpireDateShare">EXPIRE DATE :</string>
    <string name="InStoreShare">REMAINING :</string>
    <string name="PcsShare">PCS</string>
    <string name="footer_pcs">SGD</string>
    <string name="JAN">JAN</string>
    <string name="FEB">FEB</string>
    <string name="MAR">MAR</string>
    <string name="APR">APR</string>
    <string name="MAY">MAY</string>
    <string name="JUN">JUN</string>
    <string name="JUL">JUL</string>
    <string name="AUG">AUG</string>
    <string name="SEP">SEP</string>
    <string name="OCT">OCT</string>
    <string name="NOV">NOV</string>
    <string name="DEC">DEC</string>
    <string name="BeginningBalance">Beginning Credit</string>
    <string name="TopUp">Top Up</string>
    <string name="EndingBalance">Credit Balance</string>
    <string name="Baht">SGD</string>
    <string name="THB">THB</string>
    <string name="PromotionName">Promotion Name</string>
    <string name="ExpireDate">Expire Date</string>
    <string name="PromotionID">Promotion ID :</string>
    <string name="PromotionDate">Expire Date :</string>
    <string name="PromotionStatus">Status :</string>
    <string name="PromotionDetail">Promotion Detail</string>
    <string name="Unused">UNUSED</string>
    <string name="Used">USED</string>
    <string name="Expired">EXPIRED</string>
    <string name="ServiceBag">Bag</string>
    <string name="ServiceStartDate">Start Date</string>
    <string name="ServiceEndDate">End Date</string>
    <string name="ServicePrice">Price</string>
    <string name="ServiceItems">Item[s]</string>
    <string name="ServiceTotal">Total</string>
    <string name="ServiceSummary">SUMMARY</string>
    <string name="ServiceNote">NOTE :</string>
    <string name="ServiceBarcode">Barcode</string>
    <string name="ServiceName">Service Name</string>
    <string name="ServicePickUpDate">PICK UP DATE</string>
    <string name="ServiceReturnDate">RETURN DATE</string>
    <string name="Bags">Bag[s]</string>
    <string name="InProgress">IN PROGRESS</string>
    <string name="InStoreServiceHeader">Ironing Service</string>
    <string name="InStoreBuyDate">Buy Date</string>
    <string name="InStoreDescription">Service Name</string>
    <string name="InStoreRemainingItems">Remaining Item[s]</string>
    <string name="InStoreServiceItems">Service Item[s]</string>
    <string name="InStoreServiceDate">Service Date</string>
    <string name="InStoreSummary">SUMMARY</string>
    <string name="RequestQuickPinButton">Locker Quick Pin</string>
    <string name="BranchDetail">Branch Detail</string>
    <string name="DryCleaning">Dry Cleaning</string>
    <string name="Laundry">Laundry</string>
    <string name="LaundryDryCleaning">Laundry &amp; Dry Cleaning*</string>
    <string name="BagAndShoesSpa">Bag &amp; Shoes Spa</string>
    <string name="PackageDelivery">Package Delivery</string>
    <string name="PriceItemsHeader">Items</string>
    <string name="PricePriceHeader">Price inc VAT (SGD)</string>
    <string name="Man">Man</string>
    <string name="Woman">Woman</string>
    <string name="Tops">Tops</string>
    <string name="Bottoms">Bottoms</string>
    <string name="WomanBottoms">Bottoms</string>
    <string name="UnderwearsSocks">Underwears/Socks</string>
    <string name="WomanUnderwearsSocks">Underwears/Brassiere/Socks</string>
    <string name="Bedding">Bedding</string>
    <string name="Pillowcase">Pillowcase</string>
    <string name="BedSheetCover">Bed Sheet/Cover/Duvet Cover</string>
    <string name="BlanketComforter">Blanket/Comforter/Duvet</string>
    <string name="Pillow">Pillow</string>
    <string name="Doll">Doll</string>
    <string name="Extra">Extra</string>
    <string name="BathTowel">Towel</string>
    <string name="TableCloth">Table Cloth</string>
    <string name="SofaCover">Sofa/Furniture Cover (per 1 seat)</string>
    <string name="CapHatGlove">Cap/Hat/Glove</string>
    <string name="Sneakers">Sneakers</string>
    <string name="Luxury">Luxury</string>
    <string name="Suit">Suit (2pcs)</string>
    <string name="Coat">Coat</string>
    <string name="Overcoat">Overcoat</string>
    <string name="Leathers">Leathers</string>
    <string name="Dress">Dress</string>
    <string name="EveningDress">Evening Dress</string>
    <string name="ThaiDressYukataSari">Thai Dress/Yukata/Sari</string>
    <string name="WeddingDress">Wedding Dress</string>
    <string name="NecktieScarfVest">Necktie/Scarf/Vest</string>
    <string name="Curtain">Curtain (per square metre)</string>
    <string name="Carpet">Carpet (per square metre)</string>
    <string name="Wallet">Wallet</string>
    <string name="Clutch">Clutch</string>
    <string name="Bag">Bag</string>
    <string name="Shoes">Shoes</string>
    <string name="Boots">Boots</string>
    <string name="SizeS">Size S</string>
    <string name="SizeM">Size M</string>
    <string name="SizeL">Size L</string>
    <string name="AnySize">Any size</string>
    <string name="_20cm">&lt; 20 cm.</string>
    <string name="_20To25cm">20-25 cm.</string>
    <string name="_25To30cm">25-30 cm.</string>
    <string name="_30To35cm">30-35 cm.</string>
    <string name="Oversize">Oversize</string>
    <string name="Short">Short</string>
    <string name="PromotionCode">Promotion Code</string>
    <string name="LockerQuickPIN">Locker Quick Pin</string>
    <string name="StartDate">Start Date</string>
    <string name="PleaseSelect">Please select</string>
    <string name="Delivery">Pick Up</string>
    <string name="RescheduleDate">Re-schedule [Date]</string>
    <string name="RescheduleTime">Re-schedule [Time]</string>
    <string name="Locker">Locker</string>
    <string name="DropOffIcon">Drop Off</string>
    <string name="Door">Door</string>
    <string name="QuickPin">Quick Pin (Pick Up)</string>
    <string name="serviceLocker_status1">Ready for Pick Up</string>
    <string name="serviceLocker_status2">In Locker over 48 Hours</string>
    <string name="serviceLocker_status3">At Warehouse</string>
    <string name="ServiceLockerTitle">Pick Up</string>
    <string name="Normal">Normal</string>
    <string name="Express">Express</string>
    <string name="express_sg">Turnaround time of 24 hours\n*100% additional charges are applicable</string>
    <string name="normal_sg">Turnaround time of 72 hours</string>
</resources>