<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pickup"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/ServiceLockerTitle"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_light"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/point_blue"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Locker"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Door"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/QuickPin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/StartDate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/arrow_right"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_dark"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/point_yellow2"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/serviceLocker_status1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/point_blue"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/serviceLocker_status2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/point_red"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/serviceLocker_status3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />
    </LinearLayout>


</LinearLayout>