<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/navbar_icon_arrowback" />

        <box24.com.box24sdk.utils.CustomText
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/DropOffIcon"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/edt_promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_rec_stoke_grey"
                android:hint="@string/PromotionCode"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_normal" />

            <box24.com.box24sdk.utils.CustomText
                android:id="@+id/tv_locker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_rec_stoke_grey"
                android:hint="@string/Locker"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/red"

                android:textSize="@dimen/text_normal" />


        </LinearLayout>


<!--        <TextView
            android:id="@+id/btn_laundy_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_rec_red"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/LaundryNote"
            android:textColor="@color/red"
            android:textSize="@dimen/text_normal" />-->




        <box24.com.box24sdk.utils.CustomText
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_rec_stoke_pink"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

</LinearLayout>