<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/point_blue" />

        <box24.com.box24sdk.utils.CustomText
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/BranchDetail"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <box24.com.box24sdk.utils.CustomText
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="ID"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />


        <box24.com.box24sdk.utils.CustomText
            android:id="@+id/tv_quick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/LockerQuickPIN"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <box24.com.box24sdk.utils.CustomText
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:visibility="gone"
            android:singleLine="true"
            android:text="@string/StartDate"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

</LinearLayout>